solucionado bug: no guardaba bien comentarios en oportunidad. Eliminadas scrollbards de menu y dashboard

--- a/src/app/home/dashboard/dashboard.page.scss
+++ b/src/app/home/dashboard/dashboard.page.scss
@@ -3,10 +3,11 @@
   width: 100%;
 }
 
-::-webkit-scrollbar {
+.custom-content::-webkit-scrollbar{
   display: none;
 }
 
-ion-content {
+.custom-content {
+  height: 100%;
   overflow: scroll;
 }
